[project]
name = "bench-utils"
version = "0.1.2.dev3"
description = "Utilities for benchmarking VLM HyperBench models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "model-interface",
    "prompt-handler",
]
authors = [
    {name = "Anton Shiryaev", email = "med.phisiker@gmail.com"}
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["bench_utils"]

[tool.uv.sources]
model-interface = { workspace = true }
prompt-handler  = { workspace = true }

[project.urls]
Repository = "https://github.com/VLMHyperBenchTeam/bench_utils"
Homepage = "https://github.com/VLMHyperBenchTeam"
