[project]
name = "bench-utils"
version = "0.1.3.dev0"
description = "Utilities for benchmarking VLM HyperBench models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "model-interface",
    "model-qwen2_5-vl",
    "prompt-handler",
]
authors = [
    {name = "Anton Shiryaev", email = "med.phisiker@gmail.com"}
]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
model-interface = { workspace = true }
model-qwen2_5-vl = { workspace = true }
prompt-handler = { workspace = true }

[project.urls]
Repository = "https://github.com/VLMHyperBenchTeam/bench_utils"
Homepage = "https://github.com/VLMHyperBenchTeam"
